test/bad/missing_brace.veld
// BAD: missing brace — parser error
model Broken {
  id: string


